tests/parser/validinput/incons_struct_regression_3.idp
vocabulary V{
	type x
	a(x):x
}

theory T:V{
}

structure S:V{
	x = {1..2}
	a<cf> = {1->1;}
}

procedure main(){
	return 1;
}
