tests/parser/invalidinput/intmin.idp
vocabulary V{
	type X isa int
}
theory T:V{
}
structure S:V{
	X = {
		-100000000000;		
	}
}
procedure main(){
	print(S)
	return 1
}